# typst-shared-library

./: Cargo.toml  README.md  compile.sh
.github/workflows/: release.yml
crates/typst-cli/src/: world.rs
crates/typst-eval/src/: call.rs  lib.rs
crates/typst-html/src/: lib.rs
crates/typst-ide/src/: complete.rs  definition.rs  jump.rs  matchers.rs  tests.rs  tooltip.rs
crates/typst-layout/src/: lists.rs
crates/typst-layout/src/flow/: collect.rs  mod.rs
crates/typst-layout/src/inline/: collect.rs  linebreak.rs  mod.rs  shaping.rs
crates/typst-layout/src/math/: fragment.rs  mod.rs
crates/typst-layout/src/pages/: mod.rs  run.rs
crates/typst-library/: Cargo.toml
crates/typst-library/src/: diag.rs  lib.rs
crates/typst-library/src/foundations/: args.rs  array.rs  auto.rs  bytes.rs  cast.rs  content.rs  context.rs  datetime.rs  decimal.rs  duration.rs  element.rs  func.rs  label.rs  module.rs  plugin.rs  scope.rs  selector.rs  str.rs  styles.rs  symbol.rs  target.rs  ty.rs  value.rs  version.rs
crates/typst-library/src/html/: dom.rs
crates/typst-library/src/introspection/: counter.rs  introspector.rs  location.rs  state.rs
crates/typst-library/src/layout/: abs.rs  align.rs  angle.rs  axes.rs  container.rs  corners.rs  dir.rs  fr.rs  fragment.rs  frame.rs  (+8 more)
crates/typst-macros/src/: elem.rs
crates/typst-pdf/src/: font.rs  gradient.rs  image.rs  lib.rs
crates/typst-render/src/: image.rs  paint.rs  text.rs
crates/typst-shared/: Cargo.toml
crates/typst-shared/src/: cache_cell.rs  compile.rs  detached_eval.rs  download.rs  exception.rs  extended_info.rs  fmt.rs  java_world.rs  lib.rs  main.rs  memory_management.rs  query.rs  stdlib.rs  syntax.rs  terminal.rs
crates/typst-svg/src/: image.rs  shape.rs  text.rs
crates/typst-syntax/src/: file.rs  highlight.rs  node.rs  package.rs  parser.rs  reparser.rs  source.rs  span.rs
crates/typst-utils/: Cargo.toml
crates/typst-utils/src/: duration.rs  hash.rs  lib.rs  pico.rs
crates/typst/src/: lib.rs
tests/src/: collect.rs
(+39 files in other folders)
